# Toluene

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.sh  build.sh
TR-Edit/: TR-Edit.jucer
TR-Edit/Builds/LinuxMakefile/: Makefile
TR-Edit/JuceLibraryCode/: AppConfig.h  JuceHeader.h  include_juce_cryptography.cpp  include_juce_opengl.cpp
TR-Edit/Source/: Main.cpp
Toluene/: Toluene.jucer
Toluene/Builds/LinuxMakefile/: Makefile
Toluene/JuceLibraryCode/: JuceHeader.h
Toluene/KorgTrinityModel/: OscillatorModel.cpp  OscillatorModel.h
Toluene/Source/: ClockwiseCyanKnobImageArray.cpp  ClockwiseCyanKnobImageArray.h  CustomWidgetTestTabComponent.cpp  CustomWidgetTestTabComponent.h  ImageFrameArray.h  ImageKnobSlider.cpp  ImageKnobSlider.h  KitKnobImageArrays.cpp  KitKnobImageArrays.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindowComponent.cpp  MainWindowComponent.h  OscEditGroup.cpp  OscEditGroup.h
Toluene/resources/: clockwise-cyan.knob  kit-cyan.knob  kit-indigo.knob  kit-red.knob
TrinityModel/: CMakeLists.txt  ModelBackend.h  OscillatorModel.cpp  ProgramModel.cpp
TrinityModel/public/: OscillatorModel.h  ParameterIDs.h  ProgramModel.h
TrinityModel/test/: CMakeLists.txt  test_trinityModel.cpp
cmake-modules/: googletest-cmake.in  googletest-extproject.cmake
doc/: Trinity_v3_MIDIimp.TXT
